# octave-ndjson

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bench.m
cmake/: fetched-libs.cmake
docs/: Doxygen
source/: args.cpp  args.hpp  multithreaded_parser.hpp  ndjson_load.cpp  ndjson_load.hpp  ndjson_load_file.cpp  ndjson_load_string.cpp  parse_json_value.hpp  parse_octave_value.cpp  parse_octave_value.hpp  schema.cpp  schema.hpp  util.hpp
